loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: not found: value step
step = 0
^LoopFor:4: error: not found: value step
  step =step + 1
  ^LoopFor:7: error: not found: value step
for (stepper<-1 to step ){
                   ^